Insert explicit ids for headers

--- a/spring-batch-docs/modules/ROOT/pages/appendix.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/appendix.adoc
@@ -5,6 +5,7 @@
 include::attributes.adoc[]
 
 [appendix]
+[[list-of-itemreaders-and-itemwriters]]
 == List of ItemReaders and ItemWriters
 
 [[itemReadersAppendix]]
