--- a/spring-batch-docs/modules/ROOT/pages/transaction-appendix.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/transaction-appendix.adoc
@@ -3,6 +3,7 @@
 
 [[transactions]]
 [appendix]
+[[batch-processing-and-transactions]]
 == Batch Processing and Transactions
 
 include::attributes.adoc[]
