--- a/spring-batch-docs/modules/ROOT/pages/step.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/step.adoc
@@ -206,6 +206,7 @@ endif::backend-pdf[]
 
 [[InheritingFromParentStep]]
 [role="xmlContent"]
+[[inheriting-from-a-parent-step]]
 ==== Inheriting from a Parent `Step`
 
 [role="xmlContent"]
@@ -248,6 +249,7 @@ should refer to the step in the flow, not the standalone step.
 
 [[abstractStep]]
 [role="xmlContent"]
+[[abstract-step]]
 ===== Abstract `Step`
 
 [role="xmlContent"]
@@ -279,6 +281,7 @@ were not declared to be abstract. The `Step`, (`concreteStep2`) has `itemReader`
 
 [[mergingListsOnStep]]
 [role="xmlContent"]
+[[merging-lists]]
 ===== Merging Lists
 
 [role="xmlContent"]
